--- a/app/src/main/res/layout/dialog_select.xml
+++ b/app/src/main/res/layout/dialog_select.xml
@@ -1,55 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<FrameLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_root"
-        android:layout_width="@dimen/vs_480"
-        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/shape_dialog_bg_main">
-
+        android:id="@id/cl_root"
+        android:background="@drawable/shape_dialog_bg_main"
+        android:layout_width="@dimen/vs_480"
+        android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/title"
+            android:textSize="@dimen/ts_24"
+            android:textColor="@color/color_CC000000"
+            android:id="@id/title"
+            android:paddingTop="@dimen/vs_30"
+            android:paddingBottom="@dimen/vs_20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:lineSpacingExtra="@dimen/ts_40"
-            android:lineSpacingMultiplier="0"
-            android:padding="@dimen/vs_20"
-            android:singleLine="true"
             android:text="11111111"
-            android:textColor="@color/color_CC000000"
-            android:textSize="@dimen/ts_24"
+            android:singleLine="true"
+            android:lineSpacingExtra="@dimen/ts_40"
+            android:lineSpacingMultiplier="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="11111111111111111111111" />
-
+            app:layout_constraintTop_toTopOf="parent"/>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:id="@id/list"
             android:paddingLeft="@dimen/vs_30"
             android:paddingRight="@dimen/vs_30"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             app:layout_constrainedHeight="true"
-            app:layout_constraintHeight_max="@dimen/vs_410"
+            app:layout_constraintHeight_max="406mm"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
-            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
-            app:tv_verticalSpacingWithMargins="@dimen/vs_10" />
-
+            app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
         <View
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="@dimen/vs_30"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/list" />
+            app:layout_constraintTop_toBottomOf="@id/list"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
