--- a/app/src/main/res/layout/dialog_select.xml
+++ b/app/src/main/res/layout/dialog_select.xml
@@ -6,14 +6,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_gravity="center"
-        android:id="@id/cl_root"
+        android:id="@+id/cl_root"
         android:background="@drawable/shape_dialog_bg_main"
         android:layout_width="@dimen/vs_480"
         android:layout_height="wrap_content">
         <TextView
             android:textSize="@dimen/ts_24"
             android:textColor="@color/color_CC000000"
-            android:id="@id/title"
+            android:id="@+id/title"
             android:paddingTop="@dimen/vs_30"
             android:paddingBottom="@dimen/vs_20"
             android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent"/>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:orientation="vertical"
-            android:id="@id/list"
+            android:id="@+id/list"
             android:paddingLeft="@dimen/vs_30"
             android:paddingRight="@dimen/vs_30"
             android:layout_width="fill_parent"
@@ -36,7 +36,7 @@
             app:layout_constraintHeight_max="406mm"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@+id/title"
             app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
@@ -46,6 +46,6 @@
             android:layout_height="@dimen/vs_30"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/list"/>
+            app:layout_constraintTop_toBottomOf="@+id/list"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
