--- a/app/src/main/res/layout/item_search_word_split.xml
+++ b/app/src/main/res/layout/item_search_word_split.xml
@@ -6,13 +6,10 @@
     android:gravity="center_vertical"
     android:id="@id/tvSearchWord"
     android:background="@drawable/button_dialog_main"
-    android:paddingLeft="@dimen/vs_8"
-    android:paddingRight="@dimen/vs_8"
-    android:paddingTop="@dimen/vs_6"
-    android:paddingBottom="@dimen/vs_6"
+    android:padding="@dimen/vs_10"
     android:focusable="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/vs_5"
+    android:layout_marginBottom="@dimen/vs_10"
     android:singleLine="true"
     xmlns:android="http://schemas.android.com/apk/res/android" />
