--- a/app/src/main/res/layout/dialog_api_history.xml
+++ b/app/src/main/res/layout/dialog_api_history.xml
@@ -12,29 +12,28 @@
         <TextView
             android:textSize="@dimen/ts_24"
             android:textColor="@color/color_CC000000"
-            android:id="@+id/title"
-            android:padding="@dimen/vs_20"
+            android:id="@id/title"
+            android:paddingTop="@dimen/vs_25"
+            android:paddingBottom="@dimen/vs_20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="11111111"
             android:singleLine="true"
-            android:lineSpacingExtra="@dimen/ts_40"
-            android:lineSpacingMultiplier="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:orientation="vertical"
-            android:id="@+id/list"
+            android:id="@id/list"
             android:paddingLeft="@dimen/vs_30"
             android:paddingRight="@dimen/vs_30"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             app:layout_constrainedHeight="true"
-            app:layout_constraintHeight_max="406mm"
+            app:layout_constraintHeight_max="@dimen/vs_410"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintTop_toBottomOf="@id/title"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
@@ -43,6 +42,6 @@
             android:layout_height="@dimen/vs_30"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/list"/>
+            app:layout_constraintTop_toBottomOf="@id/list"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
