--- a/app/src/main/res/layout/dialog_backup.xml
+++ b/app/src/main/res/layout/dialog_backup.xml
@@ -12,31 +12,32 @@
         <TextView
             android:textSize="@dimen/ts_24"
             android:textColor="@color/color_CC000000"
-            android:id="@+id/title"
-            android:padding="@dimen/vs_20"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:id="@id/title"
+            android:paddingBottom="@dimen/vs_20"
+            android:paddingTop="@dimen/vs_25"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="数据备份还原"
             android:singleLine="true"
-            android:lineSpacingExtra="@dimen/vs_10"
-            android:lineSpacingMultiplier="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
         <LinearLayout
             android:orientation="horizontal"
-            android:id="@+id/backup_buttons"
+            android:id="@id/backup_buttons"
             android:paddingLeft="@dimen/vs_30"
             android:paddingRight="@dimen/vs_30"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/title">
+            app:layout_constraintTop_toBottomOf="@id/title">
             <TextView
                 android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:id="@+id/backupNow"
+                android:id="@id/backupNow"
                 android:background="@drawable/button_dialog_main"
                 android:padding="@dimen/vs_10"
                 android:focusable="true"
@@ -44,14 +45,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/vs_5"
                 android:text="立即备份"
-                android:layout_weight="1.0"
-                android:layout_marginEnd="@dimen/vs_5"/>
+                android:layout_weight="1.0"/>
             <TextView
                 android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:id="@+id/storagePermission"
+                android:id="@id/storagePermission"
                 android:background="@drawable/button_dialog_main"
                 android:padding="@dimen/vs_10"
                 android:focusable="true"
@@ -59,35 +59,34 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/vs_5"
                 android:text="存储权限"
-                android:layout_weight="1.0"
-                android:layout_marginStart="@dimen/vs_5"/>
+                android:layout_weight="1.0"/>
         </LinearLayout>
         <TextView
             android:textSize="@dimen/ts_24"
             android:textColor="@color/color_CC000000"
-            android:id="@+id/restore_tip"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:id="@id/restore_tip"
             android:padding="@dimen/vs_20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="点击下方数据还原"
             android:singleLine="true"
-            android:lineSpacingExtra="@dimen/vs_10"
-            android:lineSpacingMultiplier="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/backup_buttons"/>
+            app:layout_constraintTop_toBottomOf="@id/backup_buttons"/>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:orientation="vertical"
-            android:id="@+id/list"
+            android:id="@id/list"
             android:paddingLeft="@dimen/vs_30"
             android:paddingRight="@dimen/vs_30"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/vs_170"
             app:layout_constrainedHeight="true"
-            app:layout_constraintHeight_max="@dimen/vs_480"
+            app:layout_constraintHeight_max="@dimen/vs_410"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/restore_tip"
+            app:layout_constraintTop_toBottomOf="@id/restore_tip"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
@@ -96,6 +95,6 @@
             android:layout_height="@dimen/vs_30"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/list"/>
+            app:layout_constraintTop_toBottomOf="@id/list"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
