--- a/app/src/main/res/layout/dialog_api_history.xml
+++ b/app/src/main/res/layout/dialog_api_history.xml
@@ -12,7 +12,7 @@
         <TextView
             android:textSize="@dimen/ts_24"
             android:textColor="@color/color_CC000000"
-            android:id="@id/title"
+            android:id="@+id/title"
             android:paddingTop="@dimen/vs_25"
             android:paddingBottom="@dimen/vs_20"
             android:layout_width="wrap_content"
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent"/>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:orientation="vertical"
-            android:id="@id/list"
+            android:id="@+id/list"
             android:paddingLeft="@dimen/vs_30"
             android:paddingRight="@dimen/vs_30"
             android:layout_width="fill_parent"
@@ -33,7 +33,7 @@
             app:layout_constraintHeight_max="@dimen/vs_410"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintTop_toBottomOf="@+id/title"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
@@ -42,6 +42,6 @@
             android:layout_height="@dimen/vs_30"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/list"/>
+            app:layout_constraintTop_toBottomOf="@+id/list"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
