--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -9,10 +9,10 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:background="@drawable/shape_dialog_bg_main"
-        android:paddingLeft="@dimen/vs_20"
-        android:paddingTop="@dimen/vs_20"
-        android:paddingRight="@dimen/vs_20"
-        android:paddingBottom="@dimen/vs_20"
+        android:paddingLeft="@dimen/vs_30"
+        android:paddingTop="@dimen/vs_25"
+        android:paddingRight="@dimen/vs_30"
+        android:paddingBottom="@dimen/vs_30"
         android:layout_width="@dimen/vs_480"
         android:layout_height="wrap_content">
         <TextView
@@ -23,52 +23,41 @@
             android:id="@+id/confirmation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/vs_10"
+            android:layout_marginBottom="@dimen/vs_20"
             android:text="确定全部删除 ?"
-            android:singleLine="true"
-            android:lineSpacingMultiplier="0.0"/>
+            android:singleLine="true"/>
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
-                android:textColorHint="@color/color_FFFFFF_50"
                 android:gravity="center"
                 android:layout_gravity="center"
+                android:textStyle="bold"
                 android:id="@+id/btnConfirm"
                 android:background="@drawable/button_dialog_main"
                 android:focusable="true"
                 android:clickable="true"
-                android:layout_width="@dimen/vs_50"
-                android:layout_height="@dimen/vs_50"
-                android:layout_margin="@dimen/vs_10"
+                android:padding="@dimen/vs_10"
+                android:layout_marginRight="@dimen/vs_10"
                 android:text="是"
                 android:maxLines="1"
-                android:shadowColor="@color/color_000000_60"
-                android:shadowDx="0.0"
-                android:shadowDy="0.0"
-                android:shadowRadius="5.0"
                 android:layout_weight="1.0"/>
             <TextView
                 android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
-                android:textColorHint="@color/color_FFFFFF_50"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:id="@+id/btnCancel"
                 android:background="@drawable/button_dialog_main"
                 android:focusable="true"
                 android:clickable="true"
-                android:layout_width="@dimen/vs_50"
-                android:layout_height="@dimen/vs_50"
-                android:layout_margin="@dimen/vs_10"
+                android:textStyle="bold"
+                android:padding="@dimen/vs_10"
+                android:layout_marginLeft="@dimen/vs_10"
                 android:text="否"
                 android:maxLines="1"
-                android:shadowColor="@color/color_000000_60"
-                android:shadowDx="0.0"
-                android:shadowDy="0.0"
-                android:shadowRadius="5.0"
                 android:layout_weight="1.0"/>
         </TableRow>
     </LinearLayout>
