--- a/app/src/main/res/layout/dialog_quick_search.xml
+++ b/app/src/main/res/layout/dialog_quick_search.xml
@@ -8,7 +8,10 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:background="@drawable/shape_dialog_bg_main"
-        android:padding="@dimen/vs_30"
+        android:paddingBottom="@dimen/vs_30"
+        android:paddingTop="@dimen/vs_25"
+        android:paddingLeft="@dimen/vs_30"
+        android:paddingRight="@dimen/vs_30"
         android:layout_width="@dimen/vs_720"
         android:layout_height="@dimen/vs_480">
         <TextView
@@ -21,7 +24,7 @@
             android:layout_height="wrap_content"
             android:text="其他数据源中的相关资源, 没有找到可以尝试选词重搜"/>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
-            android:id="@id/mGridViewWord"
+            android:id="@+id/mGridViewWord"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:layout_width="fill_parent"
@@ -32,12 +35,12 @@
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_5"/>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
-            android:id="@id/mGridView"
+            android:id="@+id/mGridView"
             android:clipChildren="false"
             android:clipToPadding="false"
-            app:layout_constraintHeight_max="408mm"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            app:layout_constraintHeight_max="@dimen/vs_410"
             app:tv_horizontalSpacingWithMargins="@dimen/vs_5"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_5"/>
