--- a/app/src/main/res/layout/dialog_select.xml
+++ b/app/src/main/res/layout/dialog_select.xml
@@ -14,14 +14,12 @@
             android:textSize="@dimen/ts_24"
             android:textColor="@color/color_CC000000"
             android:id="@+id/title"
-            android:paddingTop="@dimen/vs_30"
+            android:paddingTop="@dimen/vs_25"
             android:paddingBottom="@dimen/vs_20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="11111111"
             android:singleLine="true"
-            android:lineSpacingExtra="@dimen/ts_40"
-            android:lineSpacingMultiplier="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -33,7 +31,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             app:layout_constrainedHeight="true"
-            app:layout_constraintHeight_max="406mm"
+            app:layout_constraintHeight_max="@dimen/vs_410"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title"
