--- a/app/src/main/res/layout/dialog_tip.xml
+++ b/app/src/main/res/layout/dialog_tip.xml
@@ -7,7 +7,10 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:background="@drawable/shape_dialog_bg_main"
-        android:padding="@dimen/vs_30"
+        android:paddingTop="@dimen/vs_25"
+        android:paddingBottom="@dimen/vs_30"
+        android:paddingLeft="@dimen/vs_30"
+        android:paddingRight="@dimen/vs_30"
         android:layout_width="@dimen/vs_480"
         android:layout_height="wrap_content">
         <TextView
@@ -17,16 +20,14 @@
             android:id="@+id/tipInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:lineSpacingExtra="@dimen/ts_50"
-            android:lineSpacingMultiplier="0.0"
             android:textAlignment="gravity"/>
         <LinearLayout
             android:layout_gravity="center"
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:weightSum="2.0"
-            android:layout_marginTop="@dimen/vs_30">
+            android:layout_marginTop="@dimen/vs_20"
+            android:weightSum="2.0">
             <TextView
                 android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
@@ -36,12 +37,12 @@
                 android:background="@drawable/button_dialog_main"
                 android:paddingTop="@dimen/vs_10"
                 android:paddingBottom="@dimen/vs_10"
-                android:layout_weight="1.0"
                 android:focusable="true"
-                android:layout_width="0mm"
+                android:layout_width="0.0mm"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/vs_5"
-                android:text="确定"/>
+                android:text="确定"
+                android:layout_weight="1.0"/>
             <TextView
                 android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
@@ -52,11 +53,11 @@
                 android:paddingTop="@dimen/vs_10"
                 android:paddingBottom="@dimen/vs_10"
                 android:focusable="true"
-                android:layout_weight="1.0"
-                android:layout_width="0mm"
+                android:layout_width="0.0mm"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/vs_5"
-                android:text="取消"/>
+                android:text="取消"
+                android:layout_weight="1.0"/>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
