--- a/app/src/main/res/layout/dialog_xwalk.xml
+++ b/app/src/main/res/layout/dialog_xwalk.xml
@@ -7,7 +7,10 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:background="@drawable/shape_dialog_bg_main"
-        android:padding="@dimen/vs_30"
+        android:paddingBottom="@dimen/vs_30"
+        android:paddingTop="@dimen/vs_25"
+        android:paddingLeft="@dimen/vs_30"
+        android:paddingRight="@dimen/vs_30"
         android:layout_width="@dimen/vs_480"
         android:layout_height="wrap_content">
         <TextView
@@ -19,9 +22,7 @@
             android:focusable="false"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="下载XWalkView运行组件"
-            android:lineSpacingExtra="@dimen/ts_50"
-            android:lineSpacingMultiplier="0.0"/>
+            android:text="下载XWalkView运行组件"/>
         <TextView
             android:textSize="@dimen/ts_22"
             android:textColor="@color/color_FFFFFF"
@@ -29,11 +30,11 @@
             android:layout_gravity="center"
             android:id="@+id/downXWalk"
             android:background="@drawable/button_dialog_main"
-            android:focusable="true"
             android:padding="@dimen/vs_10"
+            android:focusable="true"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/vs_30"
+            android:layout_marginTop="@dimen/vs_20"
             android:text="下载"/>
     </LinearLayout>
 </FrameLayout>
