--- a/app/src/main/res/layout/dialog_tip.xml
+++ b/app/src/main/res/layout/dialog_tip.xml
@@ -38,7 +38,7 @@
                 android:paddingTop="@dimen/vs_10"
                 android:paddingBottom="@dimen/vs_10"
                 android:focusable="true"
-                android:layout_width="0.0mm"
+                android:layout_width="@dimen/vs_0"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/vs_5"
                 android:text="确定"
@@ -53,7 +53,7 @@
                 android:paddingTop="@dimen/vs_10"
                 android:paddingBottom="@dimen/vs_10"
                 android:focusable="true"
-                android:layout_width="0.0mm"
+                android:layout_width="@dimen/vs_0"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/vs_5"
                 android:text="取消"
