--- a/app/src/main/res/layout/dialog_search_subtitle.xml
+++ b/app/src/main/res/layout/dialog_search_subtitle.xml
@@ -45,38 +45,31 @@
                 android:layout_marginLeft="@dimen/vs_5"
                 android:text="搜索"/>
         </LinearLayout>
-        <ScrollView
+        <LinearLayout
             android:layout_gravity="center|top"
+            android:layout_marginTop="@dimen/vs_10"
+            android:orientation="vertical"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:scrollbars="none"
+            android:clipChildren="false"
+            android:clipToPadding="false"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/vs_10">
-            <LinearLayout
-                android:layout_gravity="center|top"
-                android:orientation="vertical"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
+            android:layout_height="wrap_content">
+            <com.owen.tvrecyclerview.widget.TvRecyclerView
+                android:id="@+id/mGridView"
                 android:clipChildren="false"
                 android:clipToPadding="false"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
-                <com.owen.tvrecyclerview.widget.TvRecyclerView
-                    android:id="@+id/mGridView"
-                    android:clipChildren="false"
-                    android:clipToPadding="false"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    app:tv_horizontalSpacingWithMargins="@dimen/vs_5"
-                    app:tv_selectedItemIsCentered="true"
-                    app:tv_verticalSpacingWithMargins="@dimen/vs_5"/>
-            </LinearLayout>
-        </ScrollView>
+                android:layout_height="fill_parent"
+                app:tv_horizontalSpacingWithMargins="@dimen/vs_5"
+                app:tv_selectedItemIsCentered="true"
+                app:tv_verticalSpacingWithMargins="@dimen/vs_5"/>
+        </LinearLayout>
         <ProgressBar
             android:layout_gravity="center"
             android:id="@+id/loadingBar"
             android:visibility="gone"
+            android:gravity="center"
             android:layout_width="@dimen/vs_50"
             android:layout_height="@dimen/vs_50"
             android:indeterminateOnly="true"
