--- a/app/src/main/res/layout/dialog_backup.xml
+++ b/app/src/main/res/layout/dialog_backup.xml
@@ -14,9 +14,9 @@
             android:textColor="@color/color_CC000000"
             android:gravity="center"
             android:layout_gravity="center"
-            android:id="@+id/title"
-            android:paddingBottom="@dimen/vs_20"
+            android:id="@id/title"
             android:paddingTop="@dimen/vs_25"
+            android:paddingBottom="@dimen/vs_20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="数据备份还原"
@@ -26,18 +26,18 @@
             app:layout_constraintTop_toTopOf="parent"/>
         <LinearLayout
             android:orientation="horizontal"
-            android:id="@+id/backup_buttons"
+            android:id="@id/backup_buttons"
             android:paddingLeft="@dimen/vs_30"
             android:paddingRight="@dimen/vs_30"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/title">
+            app:layout_constraintTop_toBottomOf="@id/title">
             <TextView
                 android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:id="@+id/backupNow"
+                android:id="@id/backupNow"
                 android:background="@drawable/button_dialog_main"
                 android:padding="@dimen/vs_10"
                 android:focusable="true"
@@ -51,7 +51,7 @@
                 android:textColor="@color/color_FFFFFF"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:id="@+id/storagePermission"
+                android:id="@id/storagePermission"
                 android:background="@drawable/button_dialog_main"
                 android:padding="@dimen/vs_10"
                 android:focusable="true"
@@ -66,7 +66,7 @@
             android:textColor="@color/color_CC000000"
             android:gravity="center"
             android:layout_gravity="center"
-            android:id="@+id/restore_tip"
+            android:id="@id/restore_tip"
             android:padding="@dimen/vs_20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -74,19 +74,19 @@
             android:singleLine="true"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/backup_buttons"/>
+            app:layout_constraintTop_toBottomOf="@id/backup_buttons"/>
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:orientation="vertical"
-            android:id="@+id/list"
+            android:id="@id/list"
             android:paddingLeft="@dimen/vs_30"
             android:paddingRight="@dimen/vs_30"
             android:layout_width="fill_parent"
-            android:layout_height="@dimen/vs_170"
+            android:layout_height="wrap_content"
             app:layout_constrainedHeight="true"
-            app:layout_constraintHeight_max="@dimen/vs_410"
+            app:layout_constraintHeight_max="173mm"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/restore_tip"
+            app:layout_constraintTop_toBottomOf="@id/restore_tip"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
@@ -95,6 +95,6 @@
             android:layout_height="@dimen/vs_30"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/list"/>
+            app:layout_constraintTop_toBottomOf="@id/list"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
