--- a/app/src/main/res/layout/dialog_quick_search.xml
+++ b/app/src/main/res/layout/dialog_quick_search.xml
@@ -8,12 +8,12 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:background="@drawable/shape_dialog_bg_main"
-        android:paddingBottom="@dimen/vs_30"
-        android:paddingTop="@dimen/vs_25"
         android:paddingLeft="@dimen/vs_30"
+        android:paddingTop="@dimen/vs_25"
         android:paddingRight="@dimen/vs_30"
+        android:paddingBottom="@dimen/vs_30"
         android:layout_width="@dimen/vs_720"
-        android:layout_height="@dimen/vs_480">
+        android:layout_height="475mm">
         <TextView
             android:textSize="@dimen/ts_24"
             android:textColor="@color/color_CC000000"
