--- a/app/src/main/res/layout/loadsir_empty_layout.xml
+++ b/app/src/main/res/layout/loadsir_empty_layout.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<FrameLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
-
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <ImageView
             android:layout_width="@dimen/vs_120"
             android:layout_height="@dimen/vs_120"
-            android:src="@drawable/icon_empty" />
-
+            android:src="@drawable/icon_empty"/>
         <TextView
+            android:textSize="@dimen/ts_24"
+            android:textColor="@android:color/white"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/vs_20"
-            android:gravity="center"
-            android:text="没找到数据"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/ts_24" />
+            android:layout_marginBottom="@dimen/vs_20"
+            android:shadowColor="#ff000000"
+            android:shadowDx="2.0"
+            android:shadowDy="2.0"
+            android:shadowRadius="1.0"
+            android:text="没找到数据！"/>
     </LinearLayout>
-
 </FrameLayout>
