--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -61,8 +61,8 @@
                     android:onClick="divLoadEpgLeft"
                     style="@style/epg_window_btn">
                     <TextView
-                        android:textStyle="bold"
                         android:textSize="@dimen/ts_22"
+                        android:textStyle="bold"
                         android:textColor="@color/color_FFFFFF"
                         android:gravity="center"
                         android:id="@+id/tv_arrow0"
@@ -83,8 +83,8 @@
                         android:layout_height="@dimen/vs_24"
                         android:src="@drawable/scrollviewleft"/>
                     <TextView
-                        android:textStyle="bold"
                         android:textSize="@dimen/ts_22"
+                        android:textStyle="bold"
                         android:textColor="@color/color_FFFFFF"
                         android:gravity="center"
                         android:id="@+id/tv_arrow3"
@@ -137,8 +137,8 @@
                     android:onClick="divLoadEpgRight"
                     style="@style/epg_window_btn">
                     <TextView
-                        android:textStyle="bold"
                         android:textSize="@dimen/ts_22"
+                        android:textStyle="bold"
                         android:textColor="@color/color_FFFFFF"
                         android:gravity="center"
                         android:id="@+id/tv_arrow"
@@ -159,8 +159,8 @@
                         android:layout_height="@dimen/vs_24"
                         android:src="@drawable/scrollview"/>
                     <TextView
-                        android:textStyle="bold"
                         android:textSize="@dimen/ts_22"
+                        android:textStyle="bold"
                         android:textColor="@color/color_FFFFFF"
                         android:gravity="center"
                         android:id="@+id/tv_arrow2"
@@ -383,6 +383,13 @@
                 <ImageView
                     android:layout_gravity="center"
                     android:id="@+id/img_live_icon"
+                    android:layout_width="@dimen/vs_200"
+                    android:layout_height="@dimen/vs_100"
+                    android:src="@drawable/app_banner"
+                    android:scaleType="fitXY"/>
+                <ImageView
+                    android:layout_gravity="center"
+                    android:id="@+id/img_live_icon_xu"
                     android:layout_width="@dimen/vs_200"
                     android:layout_height="@dimen/vs_100"
                     android:src="@drawable/app_banner"
@@ -923,6 +930,6 @@
         android:shadowDx="5.0"
         android:shadowDy="5.0"
         android:shadowRadius="2.0"
-        android:digits="\ 0123456789"
+        android:digits=" 0123456789"
         android:inputType="number"/>
 </FrameLayout>
