--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -597,6 +597,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/vs_0"
+				android:text="[频道编号]"
                 android:layout_alignParentRight="true"/>
         </LinearLayout>
     </RelativeLayout>
