--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,8 +8,10 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:id="@+id/topLayout"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:paddingLeft="@dimen/vs_45"
-        android:paddingRight="@dimen/vs_50"
+        android:paddingRight="@dimen/vs_45"
         android:paddingBottom="@dimen/vs_10"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/vs_50"
@@ -23,9 +25,9 @@
             android:textColor="@android:color/white"
             android:gravity="center|left"
             android:id="@+id/tvName"
+            android:background="@drawable/button_home_sort_focus"
             android:paddingLeft="@dimen/vs_5"
             android:paddingRight="@dimen/vs_5"
-            android:background="@drawable/button_home_sort_focus"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:layout_width="wrap_content"
@@ -42,6 +44,7 @@
             android:layout_width="@dimen/vs_0"
             android:layout_height="fill_parent"
             android:layout_weight="1.0"
+            android:layout_marginRight="@dimen/vs_3"
             android:textAlignment="gravity"/>
     </LinearLayout>
     <LinearLayout
@@ -57,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/topLayout">
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:id="@+id/mGridView"
-            android:paddingLeft="54mm"
+            android:paddingLeft="54.0mm"
             android:paddingRight="@dimen/vs_50"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
