--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,9 +40,8 @@
 			android:background="@drawable/button_home_sort_focus"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:layout_width="@dimen/vs_0"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_weight="1.0"
             android:layout_marginRight="@dimen/vs_3"
             android:textAlignment="gravity"/>
     </LinearLayout>
